--- a/bib.bib
+++ b/bib.bib
@@ -105,6 +105,21 @@
 	year = {1993}
 }
 
+@inproceedings{berners.semantic,
+	author = {Tim Berners-Lee and James Hendler and Ora Lassila},
+	title = {The Semantic Web},
+	publisher = {Scientific American},
+	year = {2001},
+	month = may
+}
+
+@inproceedings{pragmatic.web,
+	author = {Mareike Schoop and Aldo de Moor and Jan L.G. Dietz},
+	title = {The Pragmatic Web: A Manifesto},
+	publisher = {Communications of The ACM},
+	year = {2006}
+}
+
 @inproceedings{paper.jackson,
 	author = {Jackson, David B. and Snell, Quinn and Clement, Mark J.},
 	title = {Core Algorithms of the Maui Scheduler},
@@ -127,7 +142,6 @@
   howpublished = {Peronal Communication},
   year = {2010}
 }
-
 
 @MISC{ppt.ecmwf,
   author = {George Mozdzynski},
