--- a/pengantar.tex
+++ b/pengantar.tex
@@ -7,11 +7,11 @@ Penulisan skripsi ini ditujukan untuk memenuhi salah satu syarat untuk menyelesa
 
 \begin{enumerate}
 \item Bapak Ade Azurat selaku dosen pembimbing tugas akhir yang telah meluangkan waktunya sepanjang semester ini untuk dapat memberikan arahan, kritik dan saran kepada penulis agar dapat menyelesaikan proses pengerjaan skripsi ini.
-\item Bapak Drs. Lim Yohanes Stefanus M.Math., Ph.D selaku dosen pembimbing akademis penulis, yang selalu membantu penulis selama masa perkuliahan.
+\item Bapak Drs. Lim Yohanes Stefanus M.Math., Ph.D selaku dosen pembimbing akademis penulis yang selalu membimbing, memberi masukan dan membantu penulis selama masa perkuliahan.
 \item Drs. H. Zulhaspan, MM dan Hj. Masreni Nasution selaku orangtua dari penulis serta Anita Putri dan Akbar Syarif selaku saudara dari penulis yang selalu mendoakan, mendukung serta menjadi motivasi penulis dalam mengerjakan skripsi ini.
-\item Kak Afifun yang telah memberikan banyak masukan terkait hal teknis kepada penulis.
-\item Lab RSE
-\item Nabila Akiti Hara selaku pacar dari penulis yang selalu memberikan motivasi dan mendukung penulis selama pengerjaan skripsi serta menemani penulis melalui \textit{facetime}.
+\item Kak Afifun yang telah memberikan banyak masukan dan menjadi teman untuk berdiskusi terkait hal teknis selama pengerjaan skripsi ini.
+\item Bu Maya, Kak Iis, Kak Niken serta teman-teman Lab RSE lainnya yang turut memberikan masukan dan bantuan kepada penulis.
+\item Nabila Akiti Hara selaku pacar dari penulis yang selalu memberikan motivasi dan mendukung penulis selama pengerjaan skripsi serta menemani penulis melalui aplikasi \textit{facetime}.
 \item Teman-teman PI BPH IMMM UI (Fadhil, Titto, Fandika, Mawan, Dodo, Okky, Devi, Rara, Ami, Rizky, Ime, Popo, Ilham) yang selalu menghibur penulis kala jenuh dalam mengerjakan skripsi dan seluruh keluarga IMMMSU UI yang telah menjadi keluarga bagi penulis selama masa perkuliahan.
 \item Arief Radityo, Arsi Alhafis, dan M. Gibran yang selalu menjadi teman untuk bermain maupun belajar bagi penulis serta membantu penulis selama perkuliahan.
 \item Sahabat-sahabat PPN (Abi, Budi, Cia, Dana, Erwin, Fakhry, Irene, Fadly, Fani, Mawan, Mutia, Sufi, Ulup) yang selalu menjadi penghibur bagi penulis setiap saat.
