--- a/bab6-penutup.tex
+++ b/bab6-penutup.tex
@@ -1,11 +1,21 @@
 %-----------------------------------------------------------------------------%
 \chapter{\babEnam}
 %-----------------------------------------------------------------------------%
-Pada bab terakhir ini, 
+Pada bab ini, akan dijelaskan kesimpulan yang didapatkan berdasarkan hasil penelitian serta saran untuk pengembangan program kedepannya.
 %---------------------------------------------------------------
 \section{Kesimpulan}
 %---------------------------------------------------------------
+Pengembangan program untuk melakukan integrasi ontologi dan \textit{web services} dapat dilakukan dengan memanfaatkan sebuah \textit{adaptor} yang dibuat pada Zotonic dimana \textit{adaptor} tersebut yang akan menghubungkan keduanya seperti yang dilakukan pada penelitian ini. \textit{Adaptor} tersebut akan membaca file rules.txt sebagai tabel \textit{mapping} untuk proses pemanggilan \textit{web services}. Sehingga perlu terlebih dahulu dilakukan pembuatan file rules.txt agar program ini dapat berjalan. Hasil dari implementasi \textit{adaptor} ini dapat digunakan baik melalui \textit{template engine} maupaun model lainnya.
 
+Penggunaan \textit{adaptor} pada \textit{template engine} dapat dimanfaatkan untuk menggantikan pembuatan \textit{business logic} yang masih harus dibuat secara manual pada kode. Hal ini berguna agar \textit{business logic} dapat bersifat lebih dinamis dan dapat disesuaikan dengan kebutuhan. Selain itu, pengguna tidak perlu mengimplementasikan \textit{business logic} lagi karena \textit{adaptor} akan langsung memanggil \textit{web services} hasil dari ABS \textit{microservices} untuk menggantikan \textit{business logic}.
+
+Penggunaan \textit{adaptor} pada model lainnya dapat digunakan salah satunya untuk mengirim \textit{resource} dari zotonic ke \textit{web services}.
 %---------------------------------------------------------------
 \section{Saran}
 %---------------------------------------------------------------
+Setelah melakukan penelitian integrasi ontologi dan \textit{web services} pada ontologi, terdapat beberapa saran yang dapat dilakukan untuk proses pengembangan selanjutnya. Berikut adalah saran untuk proses pengembangan selanjutnya:
+\begin{enumerate}
+	\item Melakukan pemetaan antara database yang digunakan oleh zotonic dan database eksternal. Hal ini tidak dilakukan pada penelitian ini karena database yang digunakan oleh zotonic sendiri masih bisa terjadi perubahan kedepannya.
+	\item Melakukan penambahan validasi pada model m\_abs sehingga dapat lebih mudah mengetahui penyebab terjadinya \textit{error}. Pada penelitian ini, validasi yang dilakukan pada model m\_abs hanya sebatas pengecekan jumlah parameter antara parameter yang diberikan pada \textit{json} dan jumlah parameter yang diberikan pada tabel \textit{mapping}.
+	\item Pembuatan tabel \textit{mapping} secara otomatis dari ontologi dan bentuk tabel \textit{mapping} yang lebih sesuai dengan informasi yang didapatkan dari ontologi karena pada penelitian ini, pembuatan tabel \textit{mapping} masih dibuat secara manual tanpa melihat informasi yang dapat diterima dari ontologi.
+\end{enumerate}
